# steam_deck_file_manager

./: .gitignore  Cargo.toml  README.md  build.ps1  build.sh
assets/: index.html  index.js
backend/: Cargo.toml
backend/assets/: index.html
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: app.rs  http_client.rs  lib.rs  protocol.rs
frontend/src/widget/: file_explorer.rs
src/: asset.rs  assets.rs  main.rs  ui.rs  webserver.rs
src/api/: assets.rs  dirs.rs  homedir.rs  index.rs  mod.rs  readdir.rs  upload.rs
