[package]
name = "steam_deck_file_manager"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
iced = { version = "0.10", features = ["image", "tokio"] }
tokio = { version = "1.34", features = ["full"] }
rust-embed = "8.0.0"
actix-web = "4.4.0"
mime_guess = "2.0.4"
serde = { version = "1.0.193", features = ["derive"] }
home = "0.5.5"
actix-multipart = "0.6.1"
serde_json = "1.0.108"
urlencoding = "2.1.3"
clap = { version = "4.4.10", features = ["default", "std", "color", "derive"] }
handlebars = "4.5.0"
lazy_static = "1.4.0"
actix-files = "0.6.2"
