[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
  "frontend",
]

[dependencies]
actix-web = "4.4.0"
clap = { version = "4.4.11", features = ["std", "color", "derive"] }
frontend = { version = "0.1.0", path = "./frontend" }
handlebars = "4.5.0"
home = "0.5.5"
mime_guess = "2.0.4"
rust-embed = { version = "8.0.0", features = ["interpolate-folder-path", "include-exclude"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
