[package]
name = "steam_deck_file_manager"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
  "frontend",
]

[profile.release]
lto = true

[dependencies]
actix-multipart = "0.6.1"
actix-web = "4.4.0"
clap = { version = "4.4.11", features = ["std", "color", "derive"] }
frontend = { version = "0.1.0", path = "./frontend" }
futures-util = "0.3.29"
handlebars = "4.5.0"
home = "0.5.5"
mime_guess = "2.0.4"
rust-embed = { version = "8.0.0", features = ["interpolate-folder-path", "include-exclude"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full", "signal"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"
