[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.24.1", features = ["persistence"]}
egui = { version = "0.24.1", features = ["log", "persistence", "serde"] }
log = "0.4.20"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "json"] }
rfd = { version = "0.12.1", default-features = false, features = ["xdg-portal", "file-handle-inner"] }
serde = { version = "1.0.193", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["rt"] }
url = "2.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.66", features = ["Window", "Response", "RequestInit", "Request", "XmlHttpRequest", "FormData", "Blob", "Headers"] }
